--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="col-xs-7 col-md-6">
                                 <div class="title">Users Total</div>
                                 <div class="data">{{totals.users}} 
-                                    <div class="change"><i class="fa fa-caret-up"> {{totals.usersDiff | number:1}}%</i></div>
+                                    <div class="change"><i class="fa fa-caret-up"></i> {{totals.usersDiff | number:1}}%</div>
                                 </div>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                             <div class="col-xs-7 col-md-6">
                                 <div class="title">Models Sliced Total</div>
                                 <div class="data">{{totals.modelsSliced}}
-                                    <div class="change"><i class="fa fa-caret-up"> {{totals.modelsSlicedDiff | number:1}}%</i></div>
+                                    <div class="change"><i class="fa fa-caret-up"></i> {{totals.modelsSlicedDiff | number:1}}%</div>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                             <div class="col-xs-7 col-md-6">
                                 <div class="title">Print Hours Total</div>
                                 <div class="data">{{totals.printHours}}
-                                    <div class="change"><i class="fa fa-caret-up"> {{totals.printHoursDiff | number:1}}%</i></div>
+                                    <div class="change"><i class="fa fa-caret-up"></i> {{totals.printHoursDiff | number:1}}%</div>
                                 </div>
                             </div>
                         </div>  
@@ -135,7 +135,7 @@
                             <div class="col-xs-5 col-md-6"><i class="fa fa-desktop large color-1"></i></div>
                             <div class="col-xs-7 col-md-6">
                                 <div class="title">Devices Connected</div>
-                                <div class="data">{{currentTotals.devices}}</div>
+                                <div class="data">{{ currentTotals.devices[currentTotals.devices.length-1] }}</div>
                             </div>
                         </div>
                         
@@ -143,7 +143,7 @@
                             <div class="col-xs-5 col-md-6"><i class="fa fa-user large color-2"></i></div>
                             <div class="col-xs-7 col-md-6">
                                 <div class="title">Users Connected </div>
-                                <div class="data">{{currentTotals.users}}</div>
+                                <div class="data">{{ currentTotals.users[currentTotals.users.length-1] }}</div>
                             </div>
                         </div>
 
@@ -151,7 +151,7 @@
                             <div class="col-xs-5 col-md-6"><i class="fa fa-briefcase large color-3"></i></div>
                             <div class="col-xs-7 col-md-6">
                                 <div class="title">Current Jobs </div>
-                                <div class="data">{{currentTotals.jobs}}</div>
+                                <div class="data">{{ currentTotals.jobs[currentTotals.jobs.length-1] }}</div>
                             </div>
                         </div>  
 
@@ -187,6 +187,7 @@
 
             </div>
 
+
         </section>
 
 
@@ -202,7 +203,7 @@
 	
 	<!-- angularjs -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
-    <script src="http://code.highcharts.com/highcharts.src.js"></script>
+    <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
     <script src="http://pablojim.github.io/highcharts-ng/javascripts/highcharts-ng.js"></script>
     
 	<script src="js/app.js"></script>
