find limits function fixed
now includes minutes data

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="col-xs-8 col-md-7">
                                 <div class="title">Devices Connected</div>
                                 <div class="data">{{ currentTotals.devices.seconds[currentTotals.devices.seconds.length-1] }}</div>
-                                <div class="limits">highest: {{currentTotals.devices.seconds.max}} lowest: {{currentTotals.devices.seconds.min}}</div>
+                                <div class="limits">highest: {{currentTotals.devices.max}} lowest: {{currentTotals.devices.min}}</div>
                             </div>
                         </div>
                         
@@ -151,7 +151,7 @@
                             <div class="col-xs-8 col-md-7">
                                 <div class="title">Users Connected </div>
                                 <div class="data">{{ currentTotals.users.seconds[currentTotals.users.seconds.length-1] }}</div>
-                                <div class="limits">highest: {{currentTotals.users.seconds.max}} lowest: {{currentTotals.users.seconds.min}}</div>
+                                <div class="limits">highest: {{currentTotals.users.max}} lowest: {{currentTotals.users.min}}</div>
                             </div>
                         </div>
 
@@ -160,7 +160,7 @@
                             <div class="col-xs-8 col-md-7">
                                 <div class="title">Current Jobs </div>
                                 <div class="data">{{ currentTotals.jobs.seconds[currentTotals.jobs.seconds.length-1] }}</div>
-                                <div class="limits">highest: {{currentTotals.jobs.seconds.max}} lowest: {{currentTotals.jobs.seconds.min}}</div>
+                                <div class="limits">highest: {{currentTotals.jobs.max}} lowest: {{currentTotals.jobs.min}}</div>
                             </div>
                         </div>  
 
