--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 	
 	<!-- angularjs -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
-    <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+    <script src="http://code.highcharts.com/highcharts.src.js"></script>
     <script src="http://pablojim.github.io/highcharts-ng/javascripts/highcharts-ng.js"></script>
     
 	<script src="js/app.js"></script>
