--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link rel="shortcut icon" href="images/element.png"/>
+	<link rel="shortcut icon" href="images/element-small.png"/>
 
     <title>printr dashboard</title>
 
